# 210CT

./: .gitignore  CMakeLists.txt  README.md
Other/: main.cpp
Week 1/: main.cpp
Week0/: main.cpp  task1.cpp
Week1/: main.cpp
Week2/: main.cpp  task1.txt  task2.txt
Week3/: main.cpp
Week4/: task1.txt
Week5/: main.cpp
Week6/: input.txt  main.cpp
Week7/: main.cpp
Week8/: main.cpp
