cmake_minimum_required(VERSION 3.6)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

project(210CT)
add_executable(Week1 Week1/main.cpp)
add_executable(Week2 Week2/main.cpp)
add_executable(Week3 Week3/main.cpp)
add_executable(Week5 Week5/main.cpp)
add_executable(Week6 Week6/main.cpp)
add_executable(Week7 Week7/main.cpp)
add_executable(Week8 Week8/main.cpp)
add_executable(Other Other/main.cpp)